2008-10-22  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Eliminate "CONST" everywhere, replacing it with "const"

2008-10-22  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* CONST -> const in *.decls, genenerate all header files
	* white spacing fixes.
	* eliminate genStubs.tcl in other places than the main "tools"

2008-10-22  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Introduce the use of CONST86 for compiling against Tcl 8.6

2008-02-06  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Updated genStubs.tcl to match with the version in Tcl8.5.1
	* re-generated all related files (*Decls.h and *StubInit.c)

2008-02-05  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Fixed issue #1081827: tkImgGIF.c is now thread-safe.

2008-02-04  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Fixed a buffer overflow (CVE-2006-4484)

2007-12-19  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to libpng 1.2.24

2006-08-04  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to libpng 1.2.12

2006-06-09  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to libtiff 3.8.2

2006-06-09  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to libpng 1.2.10

2006-06-06  Paul Obermeier <obermeier@users.sourceforge.net>

	* bmp/bmp.c: 1. Added read parser for 16 and 32 bit formats. Needed
	                when reading images from the Windows clipboard.
			(See http://wiki.tcl.tk/15647 for example)
	             2. Corrected previous rleBuf fix.

2006-06-01  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* fix a few compiler warnings when using the Intel C-compiler. Suggested by David Binderman.

2006-05-02  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* various cleanups and elimination of compiler warnings. No change in functionality.

2006-05-02  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* implement real LZW compression in GIF encoder

2006-03-22  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* windows-specific bug-fixes for TEA
